tools/crates/vendor/toml_edit/tests/fixtures/invalid/array/no-close-7.stderr
TOML parse error at line 1, column 30
  |
1 | no-close-7 = [{ key = 42} #]
  |                              ^
invalid array
expected `]`
